Added snapshot images for Ideal Job section.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ Most of my IT experience is informal. I work in administration, and so part of m
 I chose RMIT for a variety of reasons. I have known people who have been RMIT students in the past, and I’ve also been impressed by RMIT's rankings in the country and worldwide. During my studies I expect to gain both a macro and a micro view of computers and the tech industry. I expect to learn a lot about the variety of specialisations within the industry, and to gain specific knowledge and skills for getting involved.</></div>
     <a href='' onclick='toggleSection("para-job"); return false;'><h2>Ideal Job</h2></a>
         <div id='para-job' class='body-content'><h3>Junior Software Engineer, Octopus Deploy</h3>
-          <p id='job-links'><a href='https://stackoverflow.com/jobs/512404/junior-software-engineer-australia-remote-octopus-deploy'>(Job Listing)</a>
-          <a>(Snapshot)</a></p>
+          <p id='job-links'>
+          <a href='https://stackoverflow.com/jobs/512404/junior-software-engineer-australia-remote-octopus-deploy'>(Job Listing)</a>
+          <a href='snapshot1.png'>(Snapshot 1)</a>
+          <a href='snapshot2.png'>(Snapshot 2)</a>
           <h4>Description:</h4>
           <p>The job advertisement I’ve chosen is for a junior engineer at a company called Octopus Deploy. The company is involved in making software deployment automation tools. The ad appealed to me because it is targeted at junior developers with a passion for learning, and the job description suggests that the role is perfect for someone looking for strong mentorship and an opportunity to be hands-on.</p>
           <h4>Skills I have:</h4>
