Fixed header in Project Idea section.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <h2>Project Idea</h2>
     </a>
     <div id='para-project' class='body-content'>
-      <h4>Overview</h4>
+      <br><h4>Overview</h4>
 
       <p>My project idea is for a browser-based, asynchronous multiplayer factory management game, themed around a
         vaccine “arms race” - a <i>Jabs-In-Arms</i> race. Designed to be checked-in with two or three times a day, the
@@ -161,7 +161,7 @@
         all of it available on mobile or in your web browser in a sleek, minimalist representation.</p>
 
 
-      <h4>Motivation</h4>
+      <br><h4>Motivation</h4>
 
       <p>A game of this sort is interesting to me for a few reasons. Not least of all thematically, as vaccine
         development and rollout in the COVID era is likely to be a topic at the forefront of current affairs for some
@@ -176,7 +176,7 @@
         deliberately to game design principles as early as 2001 (Joseph Kim 2014).</p>
 
 
-      <h4>Description</h4>
+      <br><h4>Description</h4>
 
       <p><b>Premise:</b> The game takes place in a fictional sci-fi setting, in which an alien virus has overtaken a
         fleet of
@@ -218,7 +218,7 @@
         anybody else does, the game is essentially single-player.</p>
 
 
-      <h4>Tools and Technologies</h4>
+      <br><h4>Tools and Technologies</h4>
 
       <p>In order to host both the game and its source code, a remote version control service like GitHub will be
         necessary. As far as communication tools, a development team would use platforms such as Microsoft Team and
@@ -231,7 +231,7 @@
         Photoshop or GIMP may come in handy for the creation of simple, minimalistic art assets.</p>
 
 
-      </h4>Skills Required:</h4>
+      <br><h4>Skills Required:</h4>
 
       <p>There are a few skills necessary for a team to have in order to build and launch a game like this. First you
         would need a designer to mock up both the website and the game’s UI elements. A front-end web developer would
@@ -246,7 +246,7 @@
         of the concept.</p>
 
 
-      <h4>Outcome:</h4>
+      <br><h4>Outcome:</h4>
 
       <p>If this game is successful, the outcome will be that a small core of dedicated players would interact with the
         site daily, while a yet more casual group logged in semi-regularly. A playerbase of this kind provides a few
