--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id='student-info'>
       <p>Student #: s3895111</p>
       <p>s3895111@student.rmit.edu.au</p>
-      <a href='https://github.com/decadentpig/intro-it-ass1'>GitHub Repo</a> /
-      <a href='https://decadentpig.github.io/intro-it-ass1/'>GitHub Pages</a>
+      <a href='https://github.com/decadentpig/COSC2196'>GitHub Repo</a> /
+      <a href='https://decadentpig.github.io/COSC2196/'>GitHub Pages</a>
     </div>
   </div>
   <img src='https://static.neris-assets.com/images/personality-types/scenes/diplomats_Mediator_INFP_introduction.svg'
